[package]
name = "blockchain"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
base58 = "0.1.0"
blake2 = { version = "0.9.1", default-features = false }
byteorder = "1.4.2"
frame-metadata = { git = "https://github.com/paritytech/frame-metadata.git", branch = "td-utils" }
hex = "0.4.2"
jsonrpc = { version = "0.12.0", default-features = false }
once_cell = "1.5.2"
parity-scale-codec = "1.3.6"
path-tree = "0.1.12"
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
twox-hash = { version = "1.6.0", default-features = false }
valor = { version = "0.4.7-beta.0", package = "valor_core", features = ["util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { version = "0.4.7-beta.0", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
