[package]
name = "vln"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
valor = { version = "0.4.2-alpha.0", package = "valor_core", features = ["util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { version = "0.4.2-alpha.0", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
