[package]
name = "vln"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
hex = "0.4.2"
jsonrpc = { version = "0.12.0", default-features = false }
path-tree = "0.1.12"
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
valor = { version = "0.4.6-beta.0", package = "valor_core", features = ["util"] }
frame-metadata = { git = "https://github.com/paritytech/frame-metadata.git", branch = "td-utils" }
parity-scale-codec = "1.3.6"
once_cell = "1.5.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { version = "0.4.6-beta.0", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
